--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   },
   "homepage": "https://github.com/brigand/reflux-provides-store#readme",
   "devDependencies": {
-    "babel": "^5.8.34"
+    "babel": "^5.8.34",
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1"
   }
 }
